# cmake-template

./: .envrc  .gitignore  CMakeLists.txt  README.md  build_benchmark.sh  build_boost.sh  build_fmt.sh  build_google_test_benchmark.sh  build_gtest.sh  build_sbe.sh  sbe-example-schema.xml  setup.sh  shell.nix
cmake/: libboost.cmake  libfmt.cmake  libgoogle_test_benchmark.cmake  libsbe.cmake  link_benchmark.cmake  setup_environment.cmake
lib/: CMakeLists.txt  lib.cpp  lib.test.cpp
sbe/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main.test.cpp
util/: CMakeLists.txt  init.cpp
util/include/util/: init.hpp
